# boolean-as-a-service-rs

./: .dockerignore  .env  Cargo.toml  Dockerfile  boolean.db  fly.toml  readme.md
migrations/2022-09-30-175223_create_booleans/: down.sql  up.sql
src/: controller.rs  db.rs  main.rs  models.rs  schema.rs  service.rs
