[package]
name = "boolean-as-a-service"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1"
rand = "0.8.5"
rusqlite = { version = "0.27", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20"
log = "0.4"
env_logger = "0.9.0"
diesel = { version = "2.0.0", features = [
    "sqlite",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
